--- a/notebooks/SDG API Example.ipynb
+++ b/notebooks/SDG API Example.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UNSD SDG API : Querying data\n",
+    "=================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the development of the new SDG Global Database the UNSD Team has developed a [JSON Rest API](https://unstats.un.org/SDGAPI/swagger/) that exposes the latest available data collected from the global reporting.\n",
+    "\n",
+    "\n",
+    "In this Notebook we demonstrate how simple is to consume this API using R to query the Rest end-point, consume and plot the JSON data.   We are assuming two parameters the SDMX code for the **Proportion of population below the international poverty line of US$1.90 per day, total (%)** series which is *SI_POV_DAY1* and the M49 code for **Argentina** which is *32*."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -47,15 +65,15 @@
     "library(ggplot2)\n",
     "\n",
     "data  <- fromJSON(\"https://unstats.un.org/SDGAPI/v1/sdg/Series/Data?seriesCode=SI_POV_DAY1&areaCode=32&pageSize=28\")\n",
-    "series <- as.character(Austria$data$seriesDescription)\n",
-    "area <- as.character(Austria$data$geoAreaName)\n",
+    "series <- as.character(data$data$seriesDescription)\n",
+    "area <- as.character(data$data$geoAreaName)\n",
     "series[1] \n",
     "area[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -114,15 +132,15 @@
    ],
    "source": [
     "dat <- data.frame(\n",
-    "  years = as.integer(Austria$data$timePeriodStart),\n",
-    "  values = as.double(Austria$data$value)\n",
+    "  years = as.integer(data$data$timePeriodStart),\n",
+    "  values = as.double(data$data$value)\n",
     ")\n",
     "head(dat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +162,13 @@
    "source": [
     "ggplot(data=dat, aes(x=years, y=values, group=1)) + geom_line() +  geom_point()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
